--- a/style.css
+++ b/style.css
@@ -1,1 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800;900&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+  }
+  
+  body {
+      margin: 0 auto;
+      width: 1000px;
+    background: #f8f7f2;
+    font-family: "Montserrat", sans-serif;
+    height: 100%;
+  }
+  
+  header, main, footer {
+      margin: 0 auto;
+      text-align: center;
+  }
+  
+  li {
+      list-style-type: none;
+  }
+  
+  a {
+      text-decoration: none;
+  }
