--- a/style.css
+++ b/style.css
@@ -86,3 +86,99 @@ h3 {
 	font-size: 25px;
 	font-weight: 600;
 }
+
+h2 {
+	text-transform: uppercase;
+	font-size: 25px;
+	font-weight: 600;
+	margin: 50px 0 20px 0;
+}
+
+main {
+	position: relative;
+	margin-bottom: 1050px;
+}
+
+.block1 {
+	position: absolute;
+	left: 100px;
+	width: 300px;
+	padding: 0 50px 50px 0;
+	text-align: left;
+	border-right: 1px solid #6b4c3a;
+}
+
+.block1 li a, footer a {
+	color: #6b4c3a;
+}
+
+.block1 a:hover, footer a:hover {
+	color: #000;
+	font-weight: 400;
+}
+
+.block2 {
+	position: absolute;
+	right: 100px;
+	width: 400px;
+	text-align: left;
+}
+
+section li, section p {
+	margin-bottom: 10px;
+}
+
+.work-experience img {
+	border-radius: 30%;
+	border: 3px solid #74748a;
+}
+
+.link-work a {
+  display: block;
+  width: 150px;
+  float: left;
+  text-align: center;
+}
+
+.work-experience li {
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+  width: 156px;
+  height: 156px;
+  margin: 20px 40px 20px 0;
+  display: inline-block;
+}
+
+.link-work {
+  background: rgba(0,0,0,0.5);
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: all 0.3s ease-in-out;
+  transform: translateX(168px);
+}
+
+.work-experience li:hover .link-work {
+  -webkit-transform: translateX(0px);
+  -moz-transform: translateX(0px);
+  -ms-transform: translateX(0px);
+  -o-transform: translateX(0px);
+  transform: translateX(0px);
+  border-radius: 30%;
+  width: 157px;
+  height: 157px;
+}
+
+.button { 
+  border: none;
+  border-radius: 10px;
+  padding: 8px;
+  margin: 64px 22px;
+  background: white;
+  cursor: pointer;
+  font-weight: 600;
+  color: black;
+  font-size: 14px;
+}
